2007-08-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements in notifying the observers when removing folders
	* Improvements when deleting items
	* When deleting items from a POP, notifying observers
	* Detecting remotely removed objects on POP

2007-08-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Enhancements in the POP code, when removing and expunging items

2007-08-09  Philip Van Hoof  <pvanhoof@gnome.org>

	* Async operations can now be queued while a connection is being made
	* Enhancements to tny_folder_add_msg and tny_folder_add_msg_async
	* Some improvements when getting a folder list

2007-08-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* Code cleanups in TnyCamelSendQueue
	* Introduction of tny_folder_add_msg_async
	* Better handling of offline (because service is unavailable) cases
	* Making TnySessionCamel's maildir folders behave a bit better
	* Using tny_folder_add_msg_async in tny_camel_send_queue_add_default

	* This was a major API change

2007-08-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Consistency in the async callback APIs
	* Cleaning up in case of cancels
	* Making sync_async cancellable
	* Error reporting fixes

	* This was a major API change

2007-08-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* GDK lock awareness
	* More conservatism about reconnecting
	* Fixed a few locking problems with POP
	* Callbacks and destroynotifies of cancelled-removed items
	* Fetching of folders happens in a queue item now

2007-08-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reintroduction of cancellation support (this is experimental)
	* Timezone fix in the summary (remove your caches)
	* Making tny_account_cancel actually work, or at least a little bit
	better than before this commit (cleaning up the queue a bit)

2007-08-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reconnect hang fix
	* Invalid cancelled warning fix
	* Tryout fix (I know this doesn't sound very promising) for password questions