@@ -4,6 +4,8 @@
 	* Improvements when deleting items
 	* When deleting items from a POP, notifying observers
 	* Detecting remotely removed objects on POP
+	* Not using the too high level subscribe API (which causes unrequired
+	signal emissions)
 
 2007-08-10  Philip Van Hoof  <pvanhoof@gnome.org>
 
